Suche bei Produkten - Wenn EAN gefüllt nur nach EAN suchen

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -150,7 +150,7 @@
       Nach dem Speichern öffnet sich eine neue Seite für den Druck der Rechnung.
       Ebenfalls wird ein Informationsblatt zur DSGVO geöffnet, wenn der Kunde diese noch nicht erhalten hat.
     </p>
-    <p>In der oberen Tabelle werden alle vorhandenen Produkte aufgezeigt. Mit Hilfe der Suchfilter können diese weiter eingeschränkt werden. Durch Drücken der Enter-Taste wird eine Suche ausgelöst.</p>
+    <p>In der oberen Tabelle werden alle vorhandenen Produkte aufgezeigt. Mit Hilfe der Suchfilter können diese weiter eingeschränkt werden. Durch Drücken der Enter-Taste wird eine Suche ausgelöst. Dabei ist zu beachten, dass sobald das Suchfeld EAN ausgefüllt ist, die weiteren Suchfelder ignoriert werden.</p>
     <p>Wenn ein Produkt gewählt werden soll, kann das <em>Doppel-Häkchen-Icon</em> geklickt werden für eine Direktübernahme in die gewählten Posten. Alternativ kann das <em>OK-Icon</em> geklickt werden, um die Menge, den Rabatt, die Bezeichnung, die Seriennummer und den Hinweis vor der Übernahme in die gewählten Posten anzupassen.</p>
     <p>In der darunterliegenden Tabelle befinden sich die gewählten Posten, welche auf der Rechnung erscheinen.
       Mit dem <em>Plus-Icon</em> kann die Menge des Produktes um 1 erhöht werden.
@@ -201,7 +201,7 @@
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_INVENTAR_PRODUKT</em> benötigt.
       Um Produkte Anlegen, Bearbeiten oder Löschen zu können, wird das Recht <em>INVENTAR_PRODUKT_VERWALTEN</em> benötigt.
     </p>
-    <p>Auf dieser Seite werden alle Produkte angezeigt. Mit Hilfe der Suchfilter kann die Anzeige weiter eingeschränkt werden.</p>
+    <p>Auf dieser Seite werden alle Produkte angezeigt. Mit Hilfe der Suchfilter kann die Anzeige weiter eingeschränkt werden. Dabei ist zu beachten, dass sobald das Suchfeld EAN ausgefüllt ist, die weiteren Suchfelder ignoriert werden.</p>
     <p>Wird das Kontrollkästchen <em>Schnellerfassung</em> aktiviert, wird nach jedem Drücken der <em>Enter</em>-Taste oder Klicken auf <em>Suchen</em> die Anzahl des gefunden Produktes
       um 1 erhöht, wenn es nur ein einziges Suchergebnis gibt und das Produkt nicht die Einstellung <em>Unbegrenzt</em> gesetzt hat.
       Zusätzlich ist es nach Aktivieren der <em>Schnellerfassung</em> möglich, mit Hilfe der <em>Entf</em>-Taste das Feld EAN zu leeren.
