28 - Reparaturauftrag ausdruck 'Voraussichtlich abholbereit' kleingeschrieben

--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -158,7 +158,7 @@
           </tr>
           <tr valign=top>
             <td class="s1" valign="middle">
-              Vorraussichtl. Abholbereit:
+              Vorraussichtl. abholbereit:
             </td>
             <td class="s2" colspan="2">
               {{entity.wochentagAbholdatum}}, {{formatDate(entity.abholdatum)}} {{entity.abholzeit}} Uhr
