28 - Feld EAN bei Klick markieren

--- a/src/main/resources/public/produkt.html
+++ b/src/main/resources/public/produkt.html
@@ -44,7 +44,7 @@
           <div class="m1">
             <div class="m2m">
               <label for="searchForm_ean">EAN</label>
-              <input class="m2" id="searchForm_ean" type="text" v-model="grid.searchQuery.ean" />
+              <input class="m2" id="searchForm_ean" type="text" v-model="grid.searchQuery.ean" onclick="this.select()" />
             </div>
           </div>
           <div class="m1">
