28 - Duplizieren von Produkten ermöglichen

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -208,6 +208,7 @@
     </p>
     <p>Durch Klick auf das <em>Plus-Icon</em> kann ein neues Produkt angelegt werden.</p>
     <p>Durch Klick auf das <em>Bearbeiten-Icon</em> können die Produktdaten bearbeitet werden. Dabei ist es auch möglich, das Produkt einer anderen Produktgruppe oder -kategorie zuzuordnen.</p>
+    <p>Durch Klick auf das <em>Duplizieren-Icon</em> kann das gewählte Produkt dupliziert werden. Erst durch Bestätigen mit <em>Speichern</em> wird das Produkt als neuer Datensatz angelegt.</p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann nach erneuter Bestätigung das Produkt gelöscht werden. Dabei werden keine Posten aus den Rechnungen gelöscht. Die Bezeichnung der Posten wird in der Rechnung weiterhin angezeigt, da diese gesondert gespeichert wird.</p>
     <h4 id="ungebrenzterbestand">Ungebrenzter Bestand</h4>
     <p>Dieses Kontrollkästchen sollte nur gesetzt werden, wenn der Bestand dieses Produktes nicht messbar ist. Bspw. ist dies bei Dienstleistungen der Fall. Für diese Produkte macht es somit auch keinen Sinn einen Einkaufspreis anzugeben.</p>
