--- a/src/main/resources/public/produkt.html
+++ b/src/main/resources/public/produkt.html
@@ -80,6 +80,7 @@
         @deleted="handleDeleteResponse"
       ></delete-dialog>
       <edit-dialog
+        :duplicate="editRow.duplicate"
         :rest-url-get="editRow.restUrlGet"
         :rest-url-save="editRow.restUrlSave"
         :title="editRow.title"
