--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -72,6 +72,7 @@
               <li><a href="#rechnungsnummer">Rechnungsnummer</a></li>
               <li><a href="#auftragsnummer">Auftragsnummer</a></li>
               <li><a href="#ftpserver">FTP-Server</a></li>
+              <li><a href="#smtpserver">SMTP-Server</a></li>
               <li><a href="#filiale">Filiale</a></li>
             </ul>
           </li>
@@ -139,6 +140,9 @@
     <p>Durch Klick auf das <em>Smilie-Icon</em> kann der Reparaturauftrag erledigt oder geöffnet werden. Durch das Erledigen des Auftrags wird das Gerätepasswort gelöscht und eine Bearbeitung ist nicht mehr möglich.
       Das erneute Öffnen des Auftrages stellt das Gerätepasswort <strong>nicht</strong> wieder her.
     </p>
+    <p>Durch Klick auf das <em>E-Mail-Icon</em> kann der Kunde informiert werden, dass der Auftrag abgeschlossen ist und dieser in die Filiale kommen soll.
+      Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist.
+    </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> wird nach erneuter Bestätigung der Reparaturauftrag komplett gelöscht.</p>
     <h2 id="rechnungen">Rechnungen</h2>
     <p>Die Seite Rechnungen unterteilt sich in die zwei Unterseiten <strong>Erstellen</strong> und <strong>Rechnungen</strong>.</p>
@@ -181,6 +185,10 @@
       Dabei ist es nur möglich das Rechnungsdatum, die Zahlart, den Kunden und Reparaturauftrag zu ändern.
       Zudem darf die Menge, Bezeichnung, der Hinweis, die Seriennummer und der Rabatt von bestehenden Posten geändert werden. Es dürfen jedoch keine neuen Posten hinzugefügt oder bestehende entfernt werden.
       Das Bearbeiten der Menge nimmt keinen Einfluss auf den Bestand im Inventar. Dies wird lediglich beim Erstellen beeinflusst.
+    </p>
+    <p>Durch Klick auf das <em>E-Mail-Icon</em> kann dem Kunden die Rechnung zugesendet werden. Dazu muss die Rechnung zuerst als PDF gedruckt und im
+      sich öffnenden Dialog gewählt werden.
+      Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist.
     </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann eine Rechnung nach nochmaliger Bestätigung gelöscht werden.</p>
     <h2 id="kunden">Kunden</h2>
@@ -318,7 +326,17 @@
     <p>In diesem Feld muss lediglich die fortlaufende Nummer angegeben werden. Es empfiehlt sich beim Jahreswechsel die Nummer manuell zurückzusetzen auf 0.</p>
     <p>Angezeigt wird immer die zuletzt verwendete Nummer (NICHT die nächste Nummer).</p>
     <h4 id="ftpserver">FTP-Server</h4>
-    <p>Die hier hinterlegten FTP-Verbindungsdaten dienen zur Ablage der Bestellliste.</p>
+    <p>Hier sind die Verbindungsdaten zum FTP-Server anzugeben.
+      Diese Daten dienen dazu, um die Bestellliste lesen/schreiben zu können.
+    </p>
+    <h4 id="smtpserver">SMTP-Server</h4>
+    <p>Hier sind die Verbindungsdaten zum SMTP-Server anzugeben.
+      Dabei sind beim Benutzernamen/Passwort die Daten der Filialenadresse anzugeben.
+      Die Daten werden benötigt, um den Kunden per E-Mail über einen abgeschlossenen Reparaturauftrag zu informieren oder eine Rechnung zu senden.
+      Mit Hilfe der E-Mail-Inhalt-Felder kann allgemein gültig der Inhalt der E-Mail bestimmt werden. Als Platzhalter kann #NUMMER# verwendet werden,
+      um die Rechnungs- oder Reparaturnummer in den Text einzufügen.
+      Die Signatur wird immer im Fuß der E-Mail hinzugefügt.
+    </p>
     <h4 id="filiale">Filiale</h4>
     <p>In diesem Feld ist die Filiale zu wählen, dabei handelt es sich um eine globale Einstellung.
       Diese Einstellung wirkt sich darauf aus, welche Filiale gewählt wird, wenn ein Mitarbeiter erzeugt wird.
