--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -32,7 +32,10 @@
             <input class="m6" id="searchForm_plz" type="text" v-model="grid.searchQuery.plz"></input>
           </div>
           <div class="m1">
-            <button class="right" title="Suchen" v-on:click="grid.reload = true;">Suchen</button>
+            <div class="m2 right">
+              <button class="delete" title="Suchfelder leeren" v-on:click="grid.searchQuery = {}; grid.reload = true;"></button>
+              <button class="right" title="Suchen" v-on:click="grid.reload = true;">Suchen</button>
+            </div>
           </div>
         </div>
         <div style="height: 200px;"></div>
