--- a/src/main/resources/public/reparatur-uebersicht.html
+++ b/src/main/resources/public/reparatur-uebersicht.html
@@ -40,7 +40,10 @@
             </label>
           </div>
           <div class="m1">
-            <button class="right" title="Suchen" v-on:click="grid.reload = true;">Suchen</button>
+            <div class="m2 right">
+              <button class="delete" title="Suchfelder leeren" v-on:click="grid.searchQuery = {}; grid.reload = true;"></button>
+              <button class="right" title="Suchen" v-on:click="grid.reload = true;">Suchen</button>
+            </div>
           </div>
         </div>
         <div style="height: 200px;" v-if="kundeId === null"></div>
