Abholdatum Samstag nicht erlauben und 1 bzw. 3 Werktage anstatt Tage addieren

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -115,7 +115,7 @@
     </p>
     <h4 id="abholdatumzeit">Abholdatum/-zeit</h4>
     <p>Das Abholdatum und die Abholzeit werden dabei automatisch gefüllt.
-      Das Standardabholdatum wird dabei auf das Datum in <strong>3</strong> Tagen und die Abholzeit auf <strong>16:30 Uhr</strong> gesetzt.
+      Das Standardabholdatum wird dabei auf das Datum in <strong>3</strong>  Werktagen (Samstag ausgenommen) und die Abholzeit auf <strong>16:30 Uhr</strong> gesetzt.
     </p>
     <p>Wird die Expressbearbeitung aktiviert und es ist vor <strong>13:30 Uhr</strong> wird das Abholdatum auf den aktuellen Tag um <strong>18:30 Uhr</strong> gesetzt. Ist es nach 13:30 Uhr, wird das Abholdatum auf den nächsten Tag <strong>13:30 Uhr</strong> gesetzt.</p>
     <p>Ist das berechnete Abholdatum zu 5 oder mehr nicht erledigten anderen Reparaturaufträgen hinterlegt, wird dieses auf den nächsten Tag gesetzt, an dem weniger
