Standardanzeige für Zeilen für jede Tabelle festgelegt

--- a/src/main/resources/public/gruppe.html
+++ b/src/main/resources/public/gruppe.html
@@ -45,6 +45,7 @@
             :rest-url="grid.restUrl"
             :reload="grid.reload"
             :search-query="grid.searchQuery"
+            :size="100"
             :sort="grid.sort"
             @reloaded="grid.reload = false"
           ></grid>
