--- a/src/main/resources/public/kassenbuch-uebersicht.html
+++ b/src/main/resources/public/kassenbuch-uebersicht.html
@@ -36,6 +36,7 @@
             :filter-key="grid.searchQuery"
             :rest-url="grid.restUrl"
             :reload="grid.reload"
+            :size="10"
             :search-query="grid.searchQuery"
             @reloaded="grid.reload = false"
           ></grid>
