--- a/src/main/resources/public/mitarbeiter.html
+++ b/src/main/resources/public/mitarbeiter.html
@@ -27,6 +27,7 @@
             :filter-key="grid.searchQuery"
             :rest-url="grid.restUrl"
             :reload="grid.reload"
+            :size="10"
             :sort="grid.sort"
             @reloaded="grid.reload = false"
           ></grid>
