--- a/src/main/resources/public/rechnung-uebersicht.html
+++ b/src/main/resources/public/rechnung-uebersicht.html
@@ -66,6 +66,7 @@
             :rest-url="grid.restUrl"
             :reload="grid.reload"
             :search-query="grid.searchQuery"
+            :size="100"
             :sort="grid.sort"
             :sortorder="grid.sortorder"
             @reloaded="grid.reload = false"
