--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -64,6 +64,7 @@
             :rest-url="grid.restUrl"
             :reload="grid.reload"
             :search-query="grid.searchQuery"
+            :size="10"
             :sort="grid.sort"
             @reloaded="grid.reload = false"
           ></grid>
