--- a/src/main/resources/public/produkt.html
+++ b/src/main/resources/public/produkt.html
@@ -69,6 +69,7 @@
             :rest-url="grid.restUrl"
             :reload="grid.reload"
             :search-query="grid.searchQuery"
+            :size="100"
             :sort="grid.sort"
             @reloaded="grid.reload = false;"
           ></grid>
