Aufbau Rechnung verbessern - Footer fest am Seitenfuß
* Bei über 15 Posten Warnungsmeldung einblenden

--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -71,6 +71,9 @@
         </div>
         <div class="form" style="width: 1000px;">
           <h3>Gewählte Posten:</h3>
+          <div class="error" v-if="entity.posten.length > 15">
+            <h3>Achtung! Es sind zu viele Posten auf der Rechnung. Bitte auf zwei Rechnungen aufteilen!</h3>
+          </div>
           <table>
             <thead>
               <th style="width: 100px;">Funktionen</th>
