--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -20,16 +20,22 @@
       <div id="content">
         <div class="form m1">
           <div class="m2m">
-            <label for="searchForm_nachname">Nachname/Firmenname</label>
-            <input class="m2" id="searchForm_nachname" type="text" v-model="grid.searchQuery.nachname"></input>
+            <label for="searchForm_firmenname">Firmenname</label>
+            <input class="m2" id="searchForm_firmenname" type="text" v-model="grid.searchQuery.firmenname"></input>
           </div>
-          <div class="m2">
-            <label for="searchForm_vorname">Vorname</label>
-            <input class="m2" id="searchForm_vorname" type="text" v-model="grid.searchQuery.vorname"></input>
-          </div>
-          <div class="m6m">
-            <label for="searchForm_plz">PLZ</label>
-            <input class="m6" id="searchForm_plz" type="text" v-model="grid.searchQuery.plz"></input>
+          <div class="m1">
+            <div class="m2m">
+              <label for="searchForm_nachname">Nachname</label>
+              <input class="m2" id="searchForm_nachname" type="text" v-model="grid.searchQuery.nachname"></input>
+            </div>
+            <div class="m3m">
+              <label for="searchForm_vorname">Vorname</label>
+              <input class="m3" id="searchForm_vorname" type="text" v-model="grid.searchQuery.vorname"></input>
+            </div>
+            <div class="m6">
+              <label for="searchForm_plz">PLZ</label>
+              <input class="m6" id="searchForm_plz" type="text" v-model="grid.searchQuery.plz"></input>
+            </div>
           </div>
           <div class="m1">
             <div class="m2 right">
