--- a/src/main/resources/public/produkt.html
+++ b/src/main/resources/public/produkt.html
@@ -37,8 +37,14 @@
             </div>
           </div>
           <div class="m1">
-            <label for="searchForm_bezeichnung">Bezeichnung</label>
-            <input class="m1" id="searchForm_bezeichnung" type="text" v-model="grid.searchQuery.bezeichnung" :readonly="grid.searchQuery.ean ? grid.searchQuery.ean.length > 0 : false" ></input>
+            <div class="m2m">
+              <label for="searchForm_bezeichnung">Bezeichnung</label>
+              <input class="m2" id="searchForm_bezeichnung" type="text" v-model="grid.searchQuery.bezeichnung" :readonly="grid.searchQuery.ean ? grid.searchQuery.ean.length > 0 : false" ></input>
+            </div>
+            <div class="m2">
+              <label for="searchForm_hersteller">Hersteller</label>
+              <input class="m2" id="searchForm_hersteller" type="text" v-model="grid.searchQuery.hersteller" :readonly="grid.searchQuery.ean ? grid.searchQuery.ean.length > 0 : false" ></input>
+            </div>
           </div>
           <hr>
           <div class="m1">
@@ -60,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div style="height: 280px;"></div>
+        <div style="height: 290px;"></div>
         <div id="gridDiv" v-if="grid.gridColumns.length > 0">
           <grid
             :actions="grid.actions"
