--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -37,9 +37,13 @@
               </select>
             </div>
           </div>
-          <div class="m1">
+          <div class="m2m">
             <label for="searchForm_bezeichnung">Bezeichnung</label>
-            <input class="m1" id="searchForm_bezeichnung" type="text" v-model="grid.searchQuery.bezeichnung" :readonly="grid.searchQuery.ean ? grid.searchQuery.ean.length > 0 : false" />
+            <input class="m2" id="searchForm_bezeichnung" type="text" v-model="grid.searchQuery.bezeichnung" :readonly="grid.searchQuery.ean ? grid.searchQuery.ean.length > 0 : false" />
+          </div>
+          <div class="m2">
+            <label for="searchForm_hersteller">Hersteller</label>
+            <input class="m2" id="searchForm_hersteller" type="text" v-model="grid.searchQuery.hersteller" :readonly="grid.searchQuery.ean ? grid.searchQuery.ean.length > 0 : false" ></input>
           </div>
           <hr>
           <div class="m1">
