--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -53,6 +53,12 @@
             </div>
           </div>
           <div class="m1">
+            <div class="m2m">
+              <label class="container checkbox">Sortierung: Anzahl verkaufte Produkte
+                <input id="searchForm_sortierung" type="checkbox" v-model="grid.searchQuery.sortierung" v-on:change="saveSearchQuerySortierung" />
+                <span class="checkmark"></span>
+              </label>
+            </div>
             <div class="m2 right">
               <button class="delete" title="Suchfelder leeren" v-on:click="grid.searchQuery = {}; grid.reload = true;"></button>
               <button class="right" title="Suchen" v-on:click="grid.reload = true;">Suchen</button>
@@ -178,6 +184,7 @@
     </div>
   </body>
   <script src="/scripts/util.js"></script>
+  <script src="/scripts/localstorage.service.js"></script>
   <script src="/scripts/messages.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
