Expressbearbeitung bei Reparaturen durch E oben rechts kennzeichnen

--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -22,7 +22,9 @@
                 <img border="0" src="/themes/icons/auftrag_logo.png" width="483" height="192">
               </span>
             </td>
-            <td width="10%" style="border-right:1px solid #111111; border-left-style: solid; border-left-width:1; border-top-style:solid; border-top-width:1; border-bottom-style:solid; border-bottom-width:1" align="center" height="59"></td>
+            <td width="10%" style="border-right:1px solid #111111; border-left-style: solid; border-left-width:1; border-top-style:solid; border-top-width:1; border-bottom-style:solid; border-bottom-width:1" align="center" height="59">
+                <span class="verdana size7" v-if="entity.expressbearbeitung">E</span>
+            </td>
           </tr>
           <tr>
             <td class="size6 u" width="45%" style="border-left-style:none; border-left-width: medium; border-right-style: none; border-right-width: medium; border-bottom-style: none; border-bottom-width: medium" align="left" height="60" valign="bottom">
