Einstellungen zum Mitarbeiterprofil hinzugefügt
Es kann gewählt werden ob die Druckansicht sich in einem neuen Fenster öffnen soll und ob er Druckdialog beim Öffnen der Druckansicht angezeigt werden soll

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -414,6 +414,13 @@
     <p>Im Reiter Allgemein kann der Name, sowie weitere persönliche Daten angepasst werden.
       Zudem kann die zugehörige Filiale angepasst werden. Die Daten der Filiale werden in Rechnungen und Reparaturaufträgen dargestellt.
     </p>
+    <p>Ist die Einstellung <em>Druckansicht in neuem Fenster öffnen</em> aktiv, wird beim Öffnen der Druckansicht von Rechnungen, Reparaturaufträgen und Kassenbüchern
+       ein neues Browserfenster geöffnet.
+       Ist die Einstellung deaktiviert, öffnet sich die Druckansicht in einem neuen Browsertab.
+    </p>
+    <p>Ist die Einstellung <em>Druckdialog beim Öffnen der Druckansicht anzeigen</em> aktiv, wird beim Öffnen der Druckansicht von Rechnungen,
+       Reparaturaufträgen und Kassenbüchern der Drucken-Dialog des Browsers geöffnet. Ist die Einstellung deaktiviert, wird der Drucken-Dialog nicht geöffnet.
+    </p>
     <p>Im Reiter Anmeldedaten kann der Benutzername und das Passwort geändert werden. Dabei muss im Feld <em>Passwort</em> zur Bestätigung immer das aktuelle Passwort angegeben werden.</p>
   </body>
 </html>
