Kostenvoranschlag bei Reparaturaufträgen als Pflichtfeld

--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="m1">
-            <zeichenzaehler-label :elem="entity.kostenvoranschlag" :forid="'reparaturEditForm_kostenvoranschlag'" :label="'Kostenvoranschlag'" :maxlength="'300'"></zeichenzaehler-label>
+            <zeichenzaehler-label :elem="entity.kostenvoranschlag" :forid="'reparaturEditForm_kostenvoranschlag'" :label="'Kostenvoranschlag'" :maxlength="'300'" :required="true"></zeichenzaehler-label>
             <input class="m1" id="reparaturEditForm_kostenvoranschlag" maxlength="300" type="text" v-model="entity.kostenvoranschlag"></input>
           </div>
           <div class="m1">
