--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -203,6 +203,10 @@
       Durch Klick auf das <em>Euro-Icon</em> können alle Rechnungen des Kunden angezeigt werden.
       Durch Klick auf das <em>Bearbeiten-Icon</em> können die Kundendaten bearbeitet werden.
     </p>
+    <p>Durch Klick auf das <em>Duplikat-Icon</em> werden alle Kundendatensätze mit demselben Namen vorgefiltert.
+      Durch Auswahl eines der Kundendatensätze werden alle Rechnungen und Reparaturaufträge dieses Kunden in den in der Hauptansicht gewählten
+      Kundendatensatz übernommen. Der Kundendatensatz wird anschließend gelöscht.
+    </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann nach erneuter Bestätigung der Kunde gelöscht werden. Dabei werden keine Reparaturaufträge oder Rechnungen gelöscht. Jedoch wird die Verknüpfung zum Kunden entfernt, sodass diese Daten beim Ansehen der Aufträge/Rechnungen nicht mehr ersichtlich sind.</p>
     <h2 id="inventar">Inventar</h2>
     <p>Die Seite Inventar unterteilt sich in die sechs Unterseiten <strong>Produkte</strong>, <strong>Gruppen</strong>, <strong>Kategorien</strong>, <strong>Inventur</strong>, <strong>Export</strong> und <strong>Import</strong>.</p>    <h3 id="produkte">Produkte</h3>
