--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -59,6 +59,13 @@
           ></grid>
         </div>
       </div>
+      <kunde-suchen-dialog
+        :kunde="duplicateRow.kunde"
+        :dialog-titel="duplicateRow.title"
+        v-if="showDuplicateDialog"
+        @close="showDuplicateDialog = false"
+        @saved="duplikateZusammenfuehren"
+      ></kunde-suchen-dialog>
       <kunde-edit-dialog
         :rest-url-get="editRow.restUrlGet"
         :rest-url-save="editRow.restUrlSave"
@@ -85,5 +92,6 @@
   <script src="/scripts/zeichenzaehler.component.js"></script>
   <script src="/scripts/delete.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
+  <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunden.js"></script>
 </html>
