Fehlermeldung beim Öffnen der Ansicht Reparaturen behoben

--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -71,7 +71,7 @@
             </div>
             <div class="m4m">
               <label for="reparaturEditForm_wochentag_abholdatum">Wochentag</label>
-              <input class="m4" id="reparaturEditForm_wochentag_abholdatum" readonly type="text" v-model="vm.wochentagabholdatum" />
+              <input class="m4" id="reparaturEditForm_wochentag_abholdatum" readonly type="text" v-model="wochentagabholdatum" />
             </div>
             <div class="m2">
               <label for="reparaturEditForm_abholzeit">Abholzeit</label>
