Löschen von Kassenberichten ermöglichen

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -302,10 +302,12 @@
     <h3 id="kassenbcher">Kassenbücher</h3>
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_KASSENBUCH_UEBERSICHT</em> benötigt.
       Um die Kassenbücher öffnen zu können, wird das Recht <em>KASSENBUCH</em> benötigt.
+      Um ein Kassenbuch löschen zu können, wird das Recht <em>KASSENBUCH_VERWALTEN</em> benötigt.
     </p>
     <p>Auf dieser Seite befindet sich eine Übersicht aller erstellten Kassenbücher. Mit Hilfe der Suchfilter kann die Anzeige weiter eingeschränkt werden.</p>
     <p>Durch Klick auf das <em>Öffnen-Icon</em> kann die Druckansicht des Kassenbuchs geöffnet werden.</p>
-    <p>Das Bearbeiten oder Löschen ist nicht möglich, um eine Manipulation zu verhindern.</p>
+    <p>Durch Klick auf das <em>Löschen-Icon</em> kann nach erneuter Bestätigung das Kassenbuch gelöscht werden.</p>
+    <p>Das Bearbeiten ist nicht möglich, um eine Manipulation zu verhindern.</p>
     <h3 id="kassenstand">Kassenstand</h3>
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_KASSENBUCH_KASSENSTAND</em> benötigt.</p>
     <p>Auf dieser Seite kann geprüft werden, ob der mit dem Kassenbuch errechnete Betrag mit dem Betrag, welcher sich in der Kasse befindet, übereinstimmt.</p>
